# birthday-greetings-kata-rust

./: Cargo.toml  README.md  employee.csv
src/: lib.rs
src/application/: console.rs
src/core/: birthday_checker.rs  mod.rs
src/core/model/: birthday.rs  employee.rs  mod.rs
src/core/ports/: error_reporter.rs  mod.rs  request_employee.rs  send_greeting.rs
src/infrastructure/: logger.rs  mod.rs
src/infrastructure/file/: employee_file_reader.rs  inmemory_reader.rs  mod.rs
src/infrastructure/greeter/: email_greeting_adapter.rs  mod.rs  noop_greeting_adapter.rs
x/: coverage  coverage-watch  run-cli  tdd
