[package]
name = "hexagonal-rs"
version = "0.1.0"
authors = ["Ben MERTZ <ben.mertz.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
csv = "1.1.6"
derive_builder = "0.10.0"
lettre = "0.10.0-beta.3"
serde = { version = "1.0.125", features = ["derive"] }
structopt = "0.3.11"
